--- a/Labs/Lab-05-06/Makefile
+++ b/Labs/Lab-05-06/Makefile
@@ -1,24 +1,21 @@
 CPPFLAGS += -I ./ -std=c++98
-CXXFLAGS += -I ./ -std=c++11
-CCFLAGS += -I ./ -std=c11
+CXXFLAGS += -I ./ -std=c++98
+CCFLAGS += -I ./ -std=c98
 
 #Builds to pick from:
 all		:	release
 #Movies.exe : executable
-executable	:	Driver.o Movies.o Movie.o Text.o
-			$(CXX) $(CXXFLAGS) -o Movies.exe Driver.o Movies.o Movie.o Text.o
+Zoo.exe	:	Zoo.o Creature.o
+			$(CXX) $(CXXFLAGS) -o Zoo.exe Zoo.o Creature.o
 
 #C++ Compiler Flags
 release	: CXXFLAGS += -O3
 #C Compiler Flags
-
 release : CCFLAGS  += -O3
-release	: executable
+release	: Zoo.exe
 
-#Debug settings:
-#C and C++ Preprocessor flags
+#Debug settings: unused: -fno-access-control -Q
 #C++ Compiler Flags
-#unused: -fno-access-control -Q
 debug	:	CXXFLAGS += -DDEBUG -Wchar-subscripts -pedantic -g -Wmain -Wuninitialized -Wall -Wextra -fexceptions -O
 #C Compiler Flags
 debug	:	CCFLAGS  += -DDEBUG -Wchar-subscripts -pedantic -g -Wmain -Wuninitialized -Wall -Wextra -fexceptions -O
@@ -30,24 +27,14 @@ debug	:	executable
 #Cleanup! Deletes old exe and object files
 clean	:	#Program-01-Movies.exe
 		del *.o 
-		del Movies.exe
+		del Zoo.exe
 
 
 
 #File dependencies and how they are created
 #if any of the files listed has been altered since the last compile, generate a new .o file
-Driver.o	:	Driver.cpp
-				$(CXX) $(CXXFLAGS) -c Driver.cpp
-				
-				
-Movies.o	:	Movies.cpp
-				$(CXX) $(CXXFLAGS) -c Movies.cpp
-				
-				
-Movie.o	:	Movie.cpp
-				$(CXX) $(CXXFLAGS) -c Movie.cpp
-				
-				
-Text.o	:	Text.cpp
-				$(CXX) $(CXXFLAGS) -c Text.cpp
-				
+Creature.o	:	Creature.cpp
+				$(CXX) $(CXXFLAGS) -c Creature.cpp
+
+Zoo.o		: Zoo.cpp
+				$(CXX) $(CXXFLAGS) -c Zoo.cpp
